--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <img id="uploadedImage" style="max-width: 300px; max-height: 300px;">
         </div>
 
-        <a href="/color">Get Color Page</a> 
+        <!--<a href="/color">Get Color Page</a>--> 
         <!--The route /color is defined in the app.py file so you can just set href = /color instead of index2.html-->
 
     </body>
