--- a/templates/index2.html
+++ b/templates/index2.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
         <title>Intro to Web Dev!</title>
     </head>
-    <body>
+    <body style="background-color: lightblue;">
         <img src={{filename}} alt="Uploaded Image" width="500" height="500">
         <p></p>
-        <font color={{dominant_color_string}}>Picture Color - {{dominant_color_string}}</font>
+        <font color={{dominant_color_string}} size="50"><b>Picture Color {{dominant_color_string}}</b></font>
+        <p>Mood: Aggresive</p>
     </body>
 </html>
