--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,17 @@
         <title>Intro to Web Dev!</title>
         <title>Image Upload</title>
     </head>
-    <body>
-        <h2>Upload and Display Image</h2>
-        <form action="/upload" method="post" enctype="multipart/form-data">
+    <body style="background-color:powderblue;">
+        <h2 style="text-align:center; font-size:300%;">Upload Movie Image and Display!</h2>
+        <form style="text-align:center;" action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="fileInput" id="fileInput">
             <input type="submit" value="Upload">
         </form>
         <div>
             <img id="uploadedImage" style="max-width: 300px; max-height: 300px;">
         </div>
-
+        
         <!--<a href="/color">Get Color Page</a>--> 
         <!--The route /color is defined in the app.py file so you can just set href = /color instead of index2.html-->
-
     </body>
 </html>
